--- a/DoAnMon/Views/ClassRooms/Index.cshtml
+++ b/DoAnMon/Views/ClassRooms/Index.cshtml
@@ -24,6 +24,7 @@
     /*-------------------------------------------------*/
     /* bên trái*/
     .left-column {
+        min-height: 1216px;
         width: 250px; /* Độ rộng của cột bên trái */
         background-color: #f0f0f0; /* Màu nền của cột bên trái */
         padding: 20px; /* Khoảng cách nội dung với viền của cột */
