Fix lỗi down list sv bị lặp lại dssv

--- a/DoAnMon/Views/Home/Index.cshtml
+++ b/DoAnMon/Views/Home/Index.cshtml
@@ -1,6 +1,13 @@
 ﻿@{
     ViewData["Title"] = "OnlyA";
 }
+<style>
+    .image_banner{
+        width: 1100px;
+        height: 300px;
+    }
+}
+</style>
 <div class="container">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
@@ -13,13 +20,13 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="https://file1.hutech.edu.vn/file/slider/f4bc1b922ec864d0cfe84cf9382fa359.jpg" alt="Slide 1" style="width: 1100px; height: 300px;">
+                <img src="https://file1.hutech.edu.vn/file/slider/f4bc1b922ec864d0cfe84cf9382fa359.jpg" alt="Slide 1" class="image_banner">
             </div>
             <div class="item">
-                <img src="https://file1.hutech.edu.vn/file/slider/38ce9cac8573fd8219ae19a0a0565176.png" alt="Slide 2" style="width: 1100px; height: 300px;">
+                <img src="https://file1.hutech.edu.vn/file/slider/38ce9cac8573fd8219ae19a0a0565176.png" alt="Slide 2" class="image_banner">
             </div>
             <div class="item">
-                <img src="https://file1.hutech.edu.vn/file/slider/b8c36131bc826fd5776e1c3ea07a0128.jpg" alt="Slide 3" style="width: 1100px; height: 300px;">
+                <img src="https://file1.hutech.edu.vn/file/slider/b8c36131bc826fd5776e1c3ea07a0128.jpg" alt="Slide 3" class="image_banner">
             </div>
         </div>
     </div>
