--- a/DoAnMon/Views/Shared/_Layout.cshtml
+++ b/DoAnMon/Views/Shared/_Layout.cshtml
@@ -3,293 +3,324 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - QUẢN LÝ PHÒNG HỌC TRỰC TUYẾN</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="/assets/css/custom.css" rel="stylesheet" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>@ViewData["Title"] - QUẢN LÝ PHÒNG HỌC TRỰC TUYẾN</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<link href="/assets/css/custom.css" rel="stylesheet" />
 
-    <!-- BOOTSTRAP STYLES-->
-    <link href="/assets/css/bootstrap.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <!-- FONTAWESOME STYLES-->
-    <link href="/assets/css/font-awesome.css" rel="stylesheet" />
-    <!--CUSTOM BASIC STYLES-->
-    <link href="/assets/css/basic.css" rel="stylesheet" />
-    <!--CUSTOM MAIN STYLES-->
-    <link href="/assets/css/custom.css" rel="stylesheet" />
-    <!-- GOOGLE FONTS-->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
-    <style>
-        /*PHẦN BANNER*/
-        .banner {
-            background-color: #f2f2f2; /* Màu nền của khung banner */
-            height: 150px; /* Chiều cao của khung banner */
-            width: 100%; /* Độ rộng của khung banner sẽ bằng với độ rộng của màn hình */
-            /* Nếu bạn muốn sử dụng hình ảnh nền thay vì màu nền, bạn có thể sử dụng thuộc tính background-image */
-            /* background-image: url('path/to/your/image.jpg'); */
-            /* background-size: cover; */
-            /* background-position: center; */
-            /* background-repeat: no-repeat; */
-            text-align: center;
-            padding: 25px 14px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-        }
-        /*PHẦN MENU*/
-        nav {
-            background-color: #333;
-            height: 60px;
-        }
+	<!-- BOOTSTRAP STYLES-->
+	<link href="/assets/css/bootstrap.css" rel="stylesheet" />
+	<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+	<!-- FONTAWESOME STYLES-->
+	<link href="/assets/css/font-awesome.css" rel="stylesheet" />
+	<!--CUSTOM BASIC STYLES-->
+	<link href="/assets/css/basic.css" rel="stylesheet" />
+	<!--CUSTOM MAIN STYLES-->
+	<link href="/assets/css/custom.css" rel="stylesheet" />
+	<!-- GOOGLE FONTS-->
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+	<style>
+		/*PHẦN BANNER*/
+		.banner {
+			background-color: #f2f2f2; /* Màu nền của khung banner */
+			height: 150px; /* Chiều cao của khung banner */
+			width: 100%; /* Độ rộng của khung banner sẽ bằng với độ rộng của màn hình */
+			/* Nếu bạn muốn sử dụng hình ảnh nền thay vì màu nền, bạn có thể sử dụng thuộc tính background-image */
+			/* background-image: url('path/to/your/image.jpg'); */
+			/* background-size: cover; */
+			/* background-position: center; */
+			/* background-repeat: no-repeat; */
+			text-align: center;
+			padding: 25px 14px;
+			font-family: Georgia, 'Times New Roman', Times, serif;
+		}
+		/*PHẦN MENU*/
+		nav {
+			background-color: #333;
+			height: 60px;
+		}
 
-        .menu {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: flex-end;
-        }
+		.menu {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			display: flex;
+			justify-content: flex-end;
+		}
 
-            .menu li {
-                /* float: left; */
-                display: flex;
-                margin-right: 50px;
-            }
+			.menu li {
+				/* float: left; */
+				display: flex;
+				margin-right: 50px;
+			}
 
-                .menu li.login {
-                    margin-left: 600px; /* Phần tử logout sẽ nằm bên phải */
-                }
+				.menu li.login {
+					margin-left: 600px; /* Phần tử logout sẽ nằm bên phải */
+				}
 
-                    .menu li.login a:hover {
-                        text-decoration: underline; /* Phần tử logout sẽ nằm bên phải */
-                    }
+					.menu li.login a:hover {
+						text-decoration: underline; /* Phần tử logout sẽ nằm bên phải */
+					}
 
-                .menu li a {
-                    display: block;
-                    color: rgb(224, 215, 215);
-                    text-align: center;
-                    padding: 16px;
-                    font-size: 20px;
-                    text-decoration: none;
-                    /* margin-right: 50px; */
-                }
+				.menu li a {
+					display: block;
+					color: rgb(224, 215, 215);
+					text-align: center;
+					padding: 16px;
+					font-size: 20px;
+					text-decoration: none;
+					/* margin-right: 50px; */
+				}
 
-                    .menu li a:hover {
-                        text-decoration: none;
-                        color: rgb(224, 215, 215);
-                    }
+					.menu li a:hover {
+						text-decoration: none;
+						color: rgb(224, 215, 215);
+					}
 
-                    .menu li a.selected {
-                        background-color: #017b48;
-                        color: hsl(0, 0%, 100%);
-                        text-decoration: none;
-                    }
+					.menu li a.selected {
+						background-color: #017b48;
+						color: hsl(0, 0%, 100%);
+						text-decoration: none;
+					}
 
-        .carousel-indicators li {
-            background-color: #6c6c6c;
-        }
+		.carousel-indicators li {
+			background-color: #6c6c6c;
+		}
 
-        .carousel-indicators .active {
-            background-color: #0e8b00;
-        }
+		.carousel-indicators .active {
+			background-color: #0e8b00;
+		}
 
-        body, html {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
+		body, html {
+			margin: 0;
+			padding: 0;
+			font-family: Arial, sans-serif;
+		}
 
-        .container {
-            display: flex;
-            width: 1100px;
-            justify-content: center; /* Căn giữa nội dung */
-        }
+		.container {
+			display: flex;
+			width: 1100px;
+			justify-content: center; /* Căn giữa nội dung */
+		}
 
-        .sidebar,
-        .main-content,
-        .sidebar-right {
-            padding: 20px;
-        }
-        /* PHẦN NỘI DUNG BÊN TRÁI*/
-        .sidebar {
-            width: 200px; /* Độ rộng của cột chủ đề */
-            background-color: #E3E1D9;
-            margin-top: 20px;
-            right: 0;
-        }
+		.sidebar,
+		.main-content,
+		.sidebar-right {
+			padding: 20px;
+		}
+		/* PHẦN NỘI DUNG BÊN TRÁI*/
+		.sidebar {
+			width: 200px; /* Độ rộng của cột chủ đề */
+			background-color: #E3E1D9;
+			margin-top: 20px;
+			right: 0;
+		}
 
-            .sidebar ul {
-                list-style-type: none;
-                padding: 0;
-                margin: 0;
-                display: block;
-            }
+			.sidebar ul {
+				list-style-type: none;
+				padding: 0;
+				margin: 0;
+				display: block;
+			}
 
-                .sidebar ul li {
-                    border-bottom: 1px solid #949191;
-                    width: 100%;
-                    display: block;
-                    
-                }
+				.sidebar ul li {
+					border-bottom: 1px solid #949191;
+					width: 100%;
+					display: block;
+				}
 
-                    .sidebar ul li:last-child {
-                        border-bottom: none; /* Loại bỏ đường viền ở mục cuối cùng */
-                    }
+					.sidebar ul li:last-child {
+						border-bottom: none; /* Loại bỏ đường viền ở mục cuối cùng */
+					}
 
-                    .sidebar ul li a {
-                        /* text-decoration: none; */
-                        color: #333;
-                        font-size: 15px;
-                        padding: 5px;
-                        /* display: block; */
-                        text-align: left;
-                        overflow: hidden;
-                        white-space: wrap;
-                        text-overflow: ellipsis;
-                    }
+					.sidebar ul li a {
+						/* text-decoration: none; */
+						color: #333;
+						font-size: 15px;
+						padding: 5px;
+						/* display: block; */
+						text-align: left;
+						overflow: hidden;
+						white-space: wrap;
+						text-overflow: ellipsis;
+					}
 
-                        .sidebar ul li a:hover {
-                            text-decoration: underline;
-                            color: #333;              
-                            font-size: 15px;
-                            outline: none;
-                        }
+						.sidebar ul li a:hover {
+							text-decoration: underline;
+							color: #333;
+							font-size: 15px;
+							outline: none;
+						}
 
-            .sidebar h2 {
-                margin-top: 10px; /* Loại bỏ khoảng cách trên đầu tiêu đề */
-                margin-bottom: 10px; /* Tạo khoảng cách dưới tiêu đề */
-                text-align: center;
-            }
-        /*PHẦN NỘI DUNG CHÍNH*/
-        .main-content {
-            flex-grow: 1;
-            background-color: #F6F5F2;
-            /*Khoảng cách giữa cột chủ đề và cột nội dung bên phải */
-            width: 650px;
-            margin-top: 20px;
-            /* border: 1px solid #949191; */
-        }
+			.sidebar h2 {
+				margin-top: 10px; /* Loại bỏ khoảng cách trên đầu tiêu đề */
+				margin-bottom: 10px; /* Tạo khoảng cách dưới tiêu đề */
+				text-align: center;
+			}
+		/*PHẦN NỘI DUNG CHÍNH*/
+		.main-content {
+			flex-grow: 1;
+			background-color: #F6F5F2;
+			/*Khoảng cách giữa cột chủ đề và cột nội dung bên phải */
+			width: 650px;
+			margin-top: 20px;
+			/* border: 1px solid #949191; */
+		}
 
-            .main-content .post-content {
-                text-overflow: inherit;
-                overflow: auto;
-                display: block;
-                -webkit-line-clamp: initial;
-                -webkit-box-orient: initial;
-            }
+			.main-content .post-content {
+				text-overflow: inherit;
+				overflow: auto;
+				display: block;
+				-webkit-line-clamp: initial;
+				-webkit-box-orient: initial;
+			}
 
-            .main-content img{
-                max-height:300px;
-                max-width:500px;
-            }
-
-            
-        /*PHẦN NỘI DUNG BÊN PHẢI*/
-        .sidebar-right {
-            width: 250px; /* Độ rộng của cột nội dung bên phải */
-            background-color: #E3E1D9;
-            margin-top: 20px;
-            height: 800px;
-            overflow-y: auto;
-        }
-
-        .post {
-            background-color: #fff;
-            border: 1px solid #ccc; /* Đường viền khung bài viết */
-            padding: 10px; /*Khoảng cách giữa đường viền và nội dung */
-            border-radius: 5px;
-            margin-bottom: 20px; /* Khoảng cách giữa các bài viết */
-            /* overflow: hidden;
-                    text-overflow: ellipsis; */
-            width: 100%;
-            height: 250px;
-        }
-
-            .post img {
-                margin-bottom: 5px; /* Khoảng cách giữa hình ảnh và nội dung */
-                width: 100%; /* Đảm bảo hình ảnh không quá rộng */
-                height:120px;
-            }
-
-        .post-content {
-            overflow: hidden; /* Ẩn bất kỳ nội dung nào vượt quá khung */
-            text-overflow: ellipsis; /* Thêm dấu ba chấm (...) khi nội dung vượt quá */
-            display: -webkit-box; /* Sử dụng thuộc tính box để xử lý vấn đề */
-            -webkit-line-clamp: 3; /* Số dòng tối đa mà nội dung có thể hiển thị */
-            -webkit-box-orient: vertical;
-        }
-
-        .post h3 {
-            margin-top: 0; /* Loại bỏ khoảng cách trên cùng của tiêu đề */
-            font-size: 14px;
-            text-align:center;
-        }
-
-        .post a {
-            display: block; /* Biến liên kết thành một khối để có thể căn lề và thêm padding */
-            text-align: center; /* Căn giữa nút "Đọc thêm" */
-            padding: 5px 0; /* Khoảng cách giữa các bên của nút */
-            background-color: #f0f0f0; /* Màu nền của nút */
-            color: #333; /* Màu chữ của nút */
-            text-decoration: none; /* Loại bỏ gạch chân của liên kết */
-        }
-
-            .post a:hover {
-                background-color: #e0e0e0; /* Màu nền khi di chuột vào nút */
-            }
-
-            .wrapper {
-                display: flex;
-                flex-direction: column;
-                min-height: 200vh;
-            }
-
-            main{
-                flex: 1;
-            }
-
-            footer{
-                background-color:black;
-                color: white;
-                padding: 20px;
-            }
-        
-    </style>
+			.main-content img {
+				max-height: 300px;
+				max-width: 500px;
+			}
 
 
-    <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+		/*PHẦN NỘI DUNG BÊN PHẢI*/
+		.sidebar-right {
+			width: 250px; /* Độ rộng của cột nội dung bên phải */
+			background-color: #E3E1D9;
+			margin-top: 20px;
+			height: 800px;
+			overflow-y: auto;
+		}
+
+		.post {
+			background-color: #fff;
+			border: 1px solid #ccc; /* Đường viền khung bài viết */
+			padding: 10px; /*Khoảng cách giữa đường viền và nội dung */
+			border-radius: 5px;
+			margin-bottom: 20px; /* Khoảng cách giữa các bài viết */
+			/* overflow: hidden;
+							text-overflow: ellipsis; */
+			width: 100%;
+			height: 250px;
+		}
+
+			.post img {
+				margin-bottom: 5px; /* Khoảng cách giữa hình ảnh và nội dung */
+				width: 100%; /* Đảm bảo hình ảnh không quá rộng */
+				height: 120px;
+			}
+
+		.post-content {
+			overflow: hidden; /* Ẩn bất kỳ nội dung nào vượt quá khung */
+			text-overflow: ellipsis; /* Thêm dấu ba chấm (...) khi nội dung vượt quá */
+			display: -webkit-box; /* Sử dụng thuộc tính box để xử lý vấn đề */
+			-webkit-line-clamp: 3; /* Số dòng tối đa mà nội dung có thể hiển thị */
+			-webkit-box-orient: vertical;
+		}
+
+		.post h3 {
+			margin-top: 0; /* Loại bỏ khoảng cách trên cùng của tiêu đề */
+			font-size: 14px;
+			text-align: center;
+		}
+
+		.post a {
+			display: block; /* Biến liên kết thành một khối để có thể căn lề và thêm padding */
+			text-align: center; /* Căn giữa nút "Đọc thêm" */
+			padding: 5px 0; /* Khoảng cách giữa các bên của nút */
+			background-color: #f0f0f0; /* Màu nền của nút */
+			color: #333; /* Màu chữ của nút */
+			text-decoration: none; /* Loại bỏ gạch chân của liên kết */
+		}
+
+			.post a:hover {
+				background-color: #e0e0e0; /* Màu nền khi di chuột vào nút */
+			}
+
+		.wrapper {
+			display: flex;
+			flex-direction: column;
+			min-height: 200vh;
+		}
+
+		main {
+			flex: 1;
+		}
+
+		footer {
+			background-color: black;
+			color: white;
+			padding: 20px;
+		}
+
+		/* Responsive styles */
+		@@media (max-width: 768px) {
+			.container {
+				flex-direction: column;
+				padding: 0;
+			}
+
+			.sidebar, .main-content, .sidebar-right {
+				width: 100%;
+				margin: 10px 0;
+			}
+
+			nav {
+				justify-content: space-between;
+				padding: 0 15px;
+			}
+
+			.menu {
+				flex-direction: column;
+				align-items: flex-start;
+			}
+
+			.menu li {
+				margin-right: 0;
+				margin-bottom: 10px;
+			}
+
+			.menu li.login {
+				margin-left: 0;
+			}
+			
+		}
+	</style>
+
+
+	<script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 <body>
-    <div class="wrapper">
-        <header>
-            <div class="banner">
-                <h1>LEARN WITH ONLY A</h1>
-            </div>
-          
-            <nav style="display: flex";>
-                <ul class="menu" style="margin-right: 30vh; margin-left: 500px;">
-                    <li><a href="/Home/Index">Trang chủ</a></li>
-                    <li><a href="/ClassRooms">Lớp học</a></li>
-                    <li><a href="/BaiTaps">Bài tập</a></li>                               
-                </ul>
-                <div class="menu" style="margin-left: auto;">
-                    <partial name="_LoginPartial" />
-                </div>
-            </nav>
+	<div class="wrapper">
+		<header>
+			<div class="banner">
+				<h1>LEARN WITH ONLY A</h1>
+			</div>
 
-        </header>
-        <main>
-            @RenderBody()
-        </main>
-        <footer>
-            <p class="text-center"> Bản quyền thuộc về ONLY A - 2024</p>
-        </footer>
-    </div>
-    @await RenderSectionAsync("Scripts", required: false)
-    
+			<nav style="display: flex" ;>
+				<ul class="menu" style="margin-right: 30vh; margin-left: 500px;">
+					<li><a href="/Home/Index">Trang chủ</a></li>
+					<li><a href="/ClassRooms">Lớp học</a></li>
+					<li><a href="/BaiTaps">Bài tập</a></li>
+				</ul>
+				<div class="menu" style="margin-left: auto;">
+					<partial name="_LoginPartial" />
+				</div>
+			</nav>
+
+		</header>
+		<main role="main">
+			@RenderBody()
+		</main>
+		<footer>
+			<p class="text-center"> Bản quyền thuộc về ONLY A - 2024</p>
+		</footer>
+	</div>
+	@await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
